Add --ensure-force-color-profile flag for pixel tests

This crashes the browser if the color profile that was specified at the
command line does not match the color profile on the display.

This is desirable for pixel tests because the pixel test output is
subject to the operating system's color conversion, and will not be
predictable or useful ness the operating system's color space is
controlled for.

Bug: 784456
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I15372cba6291bc764fe862ff6112a9f41d3ce929
Reviewed-on: https://chromium-review.googlesource.com/770131
Commit-Queue: ccameron <ccameron@chromium.org>
Reviewed-by: Kai Ninomiya <kainino@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#517370}
Former-commit-id: 3788054defbfcc7da051ae9f136dad58b99046f0