ui/display/display_switches.h
@@ -15,6 +15,7 @@ namespace switches {
 // Keep sorted.
 DISPLAY_EXPORT extern const char kEnableMultiMirroring[];
 DISPLAY_EXPORT extern const char kEnableSoftwareMirroring[];
+DISPLAY_EXPORT extern const char kEnsureForcedColorProfile[];
 DISPLAY_EXPORT extern const char kForceColorProfile[];
 DISPLAY_EXPORT extern const char kForceDeviceScaleFactor[];
 // TODO(kylechar): This overlaps with --screen-config. Unify flags and remove.
